# Rustoria

./: .gitignore  Cargo.toml  README.md
mock_data/: mock_data.sqlite3-query  mock_data.txt
src/: app.rs  auth.rs  main.rs  models.rs  tui.rs  utils.rs
src/components/: home.rs  login.rs  mod.rs  register.rs
src/components/hospital/: mod.rs
src/components/hospital/finance/: invoice.rs  mod.rs  update.rs  view.rs
src/components/hospital/patients/: add.rs  delete.rs  list.rs  mod.rs  update.rs
src/components/hospital/records/: delete.rs  mod.rs  retrieve.rs  retrive.rs  store.rs  update.rs
src/components/hospital/staff/: add.rs  assign.rs  delete.rs  list.rs  mod.rs  update.rs
src/db/: mod.rs  schema.sql
