[package]
name = "rustoria"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
bcrypt = "0.17.0"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["widget-calendar"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
time = { version = "0.3.39", features = ["macros", "local-offset", "formatting"] }